genetic_fuzzing/JSON5Parser.py
# Generated from JSON5.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JSON5Parser ( Parser ):

    grammarFileName = "JSON5.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "','", "'}'", "':'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "SINGLE_LINE_COMMENT", 
                      "MULTI_LINE_COMMENT", "LITERAL", "STRING", "NUMBER", 
                      "NUMERIC_LITERAL", "SYMBOL", "IDENTIFIER", "WS" ]

    RULE_json5 = 0
    RULE_obj = 1
    RULE_pair = 2
    RULE_key = 3
    RULE_value = 4
    RULE_arr = 5
    RULE_number = 6

    ruleNames =  [ "json5", "obj", "pair", "key", "value", "arr", "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    SINGLE_LINE_COMMENT=7
    MULTI_LINE_COMMENT=8
    LITERAL=9
    STRING=10
    NUMBER=11
    NUMERIC_LITERAL=12
    SYMBOL=13
    IDENTIFIER=14
    WS=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Json5Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JSON5Parser.EOF, 0)

        def value(self):
            return self.getTypedRuleContext(JSON5Parser.ValueContext,0)


        def getRuleIndex(self):
            return JSON5Parser.RULE_json5

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJson5" ):
                listener.enterJson5(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJson5" ):
                listener.exitJson5(self)




    def json5(self):

        localctx = JSON5Parser.Json5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_json5)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 15906) != 0):
                self.state = 14
                self.value()


            self.state = 17
            self.match(JSON5Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSON5Parser.PairContext)
            else:
                return self.getTypedRuleContext(JSON5Parser.PairContext,i)


        def getRuleIndex(self):
            return JSON5Parser.RULE_obj

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObj" ):
                listener.enterObj(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObj" ):
                listener.exitObj(self)




    def obj(self):

        localctx = JSON5Parser.ObjContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_obj)
        self._la = 0 # Token type
        try:
            self.state = 35
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 19
                self.match(JSON5Parser.T__0)
                self.state = 20
                self.pair()
                self.state = 25
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 21
                        self.match(JSON5Parser.T__1)
                        self.state = 22
                        self.pair() 
                    self.state = 27
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 28
                    self.match(JSON5Parser.T__1)


                self.state = 31
                self.match(JSON5Parser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.match(JSON5Parser.T__0)
                self.state = 34
                self.match(JSON5Parser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def key(self):
            return self.getTypedRuleContext(JSON5Parser.KeyContext,0)


        def value(self):
            return self.getTypedRuleContext(JSON5Parser.ValueContext,0)


        def getRuleIndex(self):
            return JSON5Parser.RULE_pair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPair" ):
                listener.enterPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPair" ):
                listener.exitPair(self)




    def pair(self):

        localctx = JSON5Parser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.key()
            self.state = 38
            self.match(JSON5Parser.T__3)
            self.state = 39
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(JSON5Parser.STRING, 0)

        def IDENTIFIER(self):
            return self.getToken(JSON5Parser.IDENTIFIER, 0)

        def LITERAL(self):
            return self.getToken(JSON5Parser.LITERAL, 0)

        def NUMERIC_LITERAL(self):
            return self.getToken(JSON5Parser.NUMERIC_LITERAL, 0)

        def getRuleIndex(self):
            return JSON5Parser.RULE_key

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKey" ):
                listener.enterKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKey" ):
                listener.exitKey(self)




    def key(self):

        localctx = JSON5Parser.KeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_key)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 22016) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(JSON5Parser.STRING, 0)

        def number(self):
            return self.getTypedRuleContext(JSON5Parser.NumberContext,0)


        def obj(self):
            return self.getTypedRuleContext(JSON5Parser.ObjContext,0)


        def arr(self):
            return self.getTypedRuleContext(JSON5Parser.ArrContext,0)


        def LITERAL(self):
            return self.getToken(JSON5Parser.LITERAL, 0)

        def getRuleIndex(self):
            return JSON5Parser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = JSON5Parser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_value)
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.match(JSON5Parser.STRING)
                pass
            elif token in [11, 12, 13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.number()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 45
                self.obj()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 46
                self.arr()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 47
                self.match(JSON5Parser.LITERAL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSON5Parser.ValueContext)
            else:
                return self.getTypedRuleContext(JSON5Parser.ValueContext,i)


        def getRuleIndex(self):
            return JSON5Parser.RULE_arr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArr" ):
                listener.enterArr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArr" ):
                listener.exitArr(self)




    def arr(self):

        localctx = JSON5Parser.ArrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arr)
        self._la = 0 # Token type
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.match(JSON5Parser.T__4)
                self.state = 51
                self.value()
                self.state = 56
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 52
                        self.match(JSON5Parser.T__1)
                        self.state = 53
                        self.value() 
                    self.state = 58
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 59
                    self.match(JSON5Parser.T__1)


                self.state = 62
                self.match(JSON5Parser.T__5)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.match(JSON5Parser.T__4)
                self.state = 65
                self.match(JSON5Parser.T__5)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMERIC_LITERAL(self):
            return self.getToken(JSON5Parser.NUMERIC_LITERAL, 0)

        def NUMBER(self):
            return self.getToken(JSON5Parser.NUMBER, 0)

        def SYMBOL(self):
            return self.getToken(JSON5Parser.SYMBOL, 0)

        def getRuleIndex(self):
            return JSON5Parser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)




    def number(self):

        localctx = JSON5Parser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 68
                self.match(JSON5Parser.SYMBOL)


            self.state = 71
            _la = self._input.LA(1)
            if not(_la==11 or _la==12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





